# hacking

./: commit.bat  commit.sh  main.py  pyproject.toml
src/bash/: hash.txt  practice.sh  ram_moniter.sh
src/resources/: 2026-02-04_keyLog.json
src/resources/logs/: 2026-01-22_keyLog.txt
src/scripts/: device_finder.py  key_logger.py  network_speed.py  port_scanner.py  port_scanner_basic.py  wifi_signal.py
src/shell/: password_cracker.sh  practice.sh  ram_moniter.sh  test.sh
src/testing/: testing_1.py
